Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
