Kubernetes/app-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: webapp-deployment
   namespace: app
spec:
   replicas: 2
   selector:     
      matchLabels:
         app: webapp-deployment
   template:
      metadata:
         labels:
            app: webapp-deployment
      spec:
         containers:
            - name: webapp-deployment
              image: testingkyaw/springbootapp:latest
              imagePullPolicy: Always
              resources:
                 requests:
                   memory: "64Mi"
                   cpu: "250m"
              ports:
               - containerPort: 8080
