Kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
   name: webapp-deployment
   namespace: default
spec:
   replicas: 3
   selector:     
      matchLabels:
         app: webapp-deployment
   template:
      metadata:
         labels:
            app: webapp-deployment
      spec:
         containers:
            - name: webapp-deployment
              image: testingkyaw/pettwo:24
              imagePullPolicy: Always
              ports:
               - containerPort: 8080
