Kubernetes/app-service.yaml
apiVersion: v1
kind: Service                             
apiVersion: v1
metadata:
  name: webapp-deployment-service
  namespace: app
  labels:
    app: webapp-deployment
spec:
  ports:
    - port: 80                        
      targetPort: 8080
      nodePort: 32148
  selector:
    app: webapp-deployment                    
  type: LoadBalancer
