Kubernetes/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-mysql-service
  namespace: database
  labels:
    app: petclinic
spec:
  ports:
    - port: 3306
  selector:
    tier: mysql
  clusterIP: None
