Kubernetes/service.yaml
kind: Service                             
apiVersion: v1
metadata:
  name: default
  namespace: default
  labels:
    app: webapp-deployment
spec:
  ports:
    - port: 80                        
      targetPort: 8080
      nodePort: 32148
  selector:
    app: webapp-deployment                    
  type: LoadBalancer
